--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Tendencias UN"
-author: "Dirección Nacional de Planeación y Estadística"
-date: "2018/08/08"
+title: "TENDENCIAS UN"
+author: "<br/> Oficina Nacional de Estadística <br/> Dirección Nacional de Planeación y Estadística <br/> <br/> <br/> <br/> <br/> UNIVERSIDAD NACIONAL DE COLOMBIA"
+date: "2018/08/09"
 ---
 
 ```{r setup, include=FALSE}
@@ -13,14 +13,29 @@ options(htmltools.dir.version = FALSE)
 source("Manipulación.R")
 source("Funciones.R", encoding = 'UTF-8')
 ```
+# Contenido
+
+ <p style="font-size:100%;"> 1. Programas académicos </p>
+ <p style="font-size:100%;"> 2. Inscritos y admitidos </p> 
+ <p style="font-size:100%;"> 3. Matriculados primera vez </p>
+ <p style="font-size:100%;"> 4. Matriculados </p>
+ <p style="font-size:100%;"> 5. Graduados </p>
+ <p style="font-size:100%;"> 6. Docentes de carrera </p>
+ <p style="font-size:100%;"> 7. Razón de estudiantes por docente </p>
+ <p style="font-size:100%;"> 8. Administrativos de carrera </p>
+ <p style="font-size:100%;"> 9. Capacidad y resultados de investigación </p>
+ <p style="font-size:100%;"> 10. Bienestar universitario </p>
+ <p style="font-size:100%;"> 11. Pruebas Saber PRO 2017 </p>
+ <p style="font-size:100%;"> 12. Deserción </p>
 
 ---
+
 class: inverse, middle, center
 
 # Programas Académicos
 
 ---
-# <h3> Evolución número programas académicos de pregrado y postgrado </h3>
+### Evolución número programas académicos de pregrado y postgrado
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
 Programas <- series(
@@ -33,6 +48,7 @@ Programas <- series(
 ```
 
 ---
+
 # <h3> Evolución número programas académicos de postgrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -46,6 +62,7 @@ series(
 ```
 
 ---
+
 # <h3> Proporción de programas acreditados de pregrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -67,6 +84,7 @@ torta(
 
 ```
 ---
+
 # <h3> Proporción de programas acreditados de postgrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -89,6 +107,7 @@ torta(
 ```
 
 ---
+
 # <h3> Proporción de programas acreditados de postgrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -113,13 +132,14 @@ torta(
 
 ```
 
-
 ---
+
 class: inverse, middle, center
 
 # Inscritos y Admitidos
 
 ---
+
 # <h3> Evolución de inscritos a la Universidad -pregrado y postgrado- </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -134,6 +154,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución de inscritos a la Universidad por nivel de formación</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -149,8 +170,8 @@ series(
 )
 ```
 
-
 ---
+
 # <h3> Evolución de inscritos y admitidos a pregrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -167,6 +188,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución de inscritos a pregrado por sexo </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -184,6 +206,7 @@ series(
 
 
 ---
+
 # <h3> Evolución de admitidos a pregrado por sexo </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -200,6 +223,7 @@ series(
 ```
 
 ---
+
 # <h3> Inscritos a pregrado por sede de inscripción </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -262,6 +286,7 @@ barra_horizontal(
 ```
 
 ---
+
 # <h3> Evolución de inscritos a pregrado por tipo de inscripción </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -279,6 +304,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución de inscritos a pregrado Programa PAES </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -299,6 +325,7 @@ series(
 
 
 ---
+
 # <h3> Evolución de inscritos a pregrado Programa PEAMA </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -320,6 +347,7 @@ series(
 )
 ```
 ---
+
 # <h3> Situación actual de inscritos a pregrado por tipo de inscripción </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -344,6 +372,7 @@ torta(
 ```
 
 ---
+
 # <h3> Situación actual de admitidos a pregrado por tipo de inscripción </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -368,7 +397,7 @@ torta(
 ```
 
 ---
-  
+
 # <h3> Evolución de inscritos y admitidos a postgrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -408,13 +437,14 @@ torta(
 )
 ```
 
-
 ---
+
 class: inverse, middle, center
 
 # Matriculados primera vez
 
 ---
+
 # <h3> Evolución matriculados primera vez - pregrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -433,6 +463,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución matriculados primera vez - postgrado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -451,11 +482,13 @@ series(
 ```
 
 ---
+
 class: inverse, middle, center
 
 # Matriculados 
 
 ---
+
 # <h3> Evolución estudiantes matriculados </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -493,6 +526,7 @@ series(
 )
 ```
 ---
+
 # <h3> Proporción de matriculados por sede </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -522,6 +556,7 @@ torta(
 ```
 
 ---
+
 # <h3> Evolución matriculados por nivel de formación </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -538,6 +573,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución matriculados en postgrado por nivel de formación</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -557,6 +593,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución matriculados en pregrado por modalidad de admisión</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -598,6 +635,7 @@ torta(
 ```
 
 ---
+
 # <h3> Evolución de matriculados del Programa PAES </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -617,6 +655,7 @@ series(
 ```
 
 ---
+
 # <h3> Evolución de matriculados del Programa PEAMA </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -693,12 +732,14 @@ torta(
 ]
 
 ---
+
 class: inverse, middle, center
 
 # Graduados
 
 
 ---
+
 # <h3> Evolución anual de estudiantes graduados </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -733,6 +774,7 @@ series_a(
 ```
 
 ---
+
 # <h3> Proporción de graduados sedes andinas </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -761,6 +803,7 @@ torta(
 ```
 
 ---
+
 # <h3> Evolución anual de estudiantes graduados por nivel de formación</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -814,6 +857,7 @@ series_a(
 ```
 
 ---
+
 # <h3> Proporción de graduados en pregrado por modalidad de admisión </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -893,8 +937,8 @@ torta(
 ```
 ]
 
-
 ---
+
 class: inverse, middle, center
 
 # Docentes de carrera
@@ -1016,7 +1060,6 @@ torta(
 )
 ```
 
-
 ---
 
 # <h3> Evolución anual docentes de carrera por máximo nivel de formación</h3>
@@ -1121,6 +1164,7 @@ torta(
 ```
 
 ---
+
 # <h3> Países de origen de universidades de docentes con doctorado </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1245,9 +1289,8 @@ torta(
 )
 ```
 
-
-
 ---
+
 class: inverse, middle, center
 
 # Razón de estudiantes por docente
@@ -1291,6 +1334,7 @@ series_a(
 
 ```
 ---
+
 # <h3> Estado actual razón de estudiantes por docente - sedes andinas </h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1317,8 +1361,8 @@ barra_vertical(
 
 ```
 
-
 ---
+
 class: inverse, middle, center
 
 # Administrativos de carrera
@@ -1553,6 +1597,7 @@ class: inverse, middle, center
 # Capacidad y resultados de investigación
 
 ---
+
 # <h3> Evolución anual de grupos activos de investigación</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1673,6 +1718,7 @@ torta(
 ```
 
 ---
+
 # <h3> Evolución anual de  revistas de investigación</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1905,6 +1951,7 @@ class: inverse, middle, center
 # Bienestar Universitario <br/> <br/> Área de Gestión y Fomento Socieconómico
 
 ---
+
 # <h4> Evolución cobertura beneficiarios Área de Gestión y Fomento Socioeconómico</h4>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1922,6 +1969,7 @@ series(
 
 
 ---
+
 # <h4> Evolución cobertura programas Área de Gestión y Fomento Socioeconómico</h4>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -1972,16 +2020,17 @@ torta(
 )
 ```
 
-
-
-
-
 ---
+
 class: inverse, middle, center
 
 # Resultados Pruebas Saber PRO 2017
 
 ---
+
+
+
+
 
 # <h3> Pruebas y competencias evaluadas en las pruebas Saber Pro 2017 </h3>
 
@@ -2457,11 +2506,13 @@ ggplotly(p)
 ```
 
 ---
+
 class: inverse, middle, center
 
 # Análisis de Deserción en Pregrado
 
 ---
+
 # <h3> Escenarios para evaluación de los resultados Deserción SPADIES</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -2481,6 +2532,7 @@ ggplot() + xlim(0, 40) + ylim(0, 100) +
   )
 ```
 ---
+
 # <h3> Deserción por sedes de la Universidad</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -2509,6 +2561,7 @@ ggplot(SPADIES_SED, aes(x = Semestre1, y = Semestre15 , color = Sede, label = Se
         legend.position="top")
 ```
 ---
+
 # <h3> Deserción por programas académicos de la Universidad</h3>
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
 ggplot(SPADIES_PRO, aes(x = Semestre1, y = Semestre15 , color = Sede)) + 
@@ -2531,6 +2584,7 @@ ggplot(SPADIES_PRO, aes(x = Semestre1, y = Semestre15 , color = Sede)) +
     legend.position="top")
 ```
 ---
+
 # <h3> Deserción por programas académicos de la Universidad</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -2554,6 +2608,7 @@ ggplotly(p)
 ```
 
 ---
+
 # <h3> Programas académicos con niveles críticos de deserción</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
@@ -2578,6 +2633,7 @@ ggplot(SPADIES_PRO, aes(x = Semestre1, y = Semestre15 , color = Sede, label = Pr
     legend.position="top")
 ```
 ---
+
 # <h3> Programas académicos con niveles negativos de deserción</h3>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
