--- a/index.Rmd
+++ b/index.Rmd
@@ -1725,7 +1725,7 @@ class: inverse, middle, center
 
 ### Fuentes de información
 
-Información consolidada por la [Dirección Nacional de Planeación y Estadística](http://personal.unal.edu.co/) y la  [Vicerrectoría de Investigación](http://viceinvestigacion.unal.edu.co/index.php) de la Universidad y contenida tanto en la Revista de Estadísticas e Indicadores como en la publicación de [Capacidades de Investigación](http://investigacion.unal.edu.co/servicios/capacidades-de-investigacion/indicadores-2007-2016/)
+Información consolidada por la [Dirección Nacional de Planeación y Estadística](http://www.onp.unal.edu.co/) y la  [Vicerrectoría de Investigación](http://viceinvestigacion.unal.edu.co/index.php) de la Universidad y contenida tanto en la Revista de Estadísticas e Indicadores como en la publicación de [Capacidades de Investigación](http://investigacion.unal.edu.co/servicios/capacidades-de-investigacion/indicadores-2007-2016/)
 
 ---
 
@@ -2086,7 +2086,7 @@ class: inverse, middle, center
 
 ### Fuentes de información
 
-Información consolidada en la [Dirección Nacional de Planeación y Estadística]() con base en información suministrada por la [Dirección Nacional de Bienestar Universitario](http://www.bienestar.unal.edu.co/) de la Universidad.
+Información consolidada en la [Dirección Nacional de Planeación y Estadística](http://www.onp.unal.edu.co/) con base en información suministrada por la [Dirección Nacional de Bienestar Universitario](http://www.bienestar.unal.edu.co/) de la Universidad.
 
 ### Consideraciones metodológicas
 
@@ -2683,7 +2683,7 @@ Información consolidada y procesada por la Dirección Nacional de Planeación y
 * <p style="font-size:63%;"> Los nuevos desarrollos realizados en el SPADIES por parte del Ministerio de Educación han dificultado el reporte de información a este sistema por parte de la Universidad durante los años 2017 y 2018.</p> 
 * <p style="font-size:63%;"> Para efectos de este análisis se consideraron las cohortes de matriculados por primera vez en los años 2007 y 2008 y se evaluó su comportamiento 15 semestres después (deserción acumulada al periodo 15). Así mismo, se consideraron las cohortes 2014 y 2015 y se evaluó su comportamiento al periodo 2 (deserción a primer semestre)</p>
 * <p style="font-size:63%;"> Los programas académicos con una baja cobertura en matriculados por primera vez pueden presentar importantes variaciones en las cifras presentadas.</p>
-* <p style="font-size:63%;"> Por lo anterior, este análisis es una aproximación al comportamiento de este fenómeno en la institución el cual invita a los interesados a indagar y profundizar en los diferentes aspectos de esta problemática tanto a nivel global como local previo a la extracción de conclusiones finales.</p>
+* <p style="font-size:63%;"> Por lo anterior, este análisis es una aproximación al comportamiento de este fenómeno en la institución el cual invita a los interesados a indagar y profundizar en los diferentes aspectos de esta problemática tanto a nivel global como local, previo a la extracción de conclusiones.</p>
 
 ---
 
